--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,26 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <distributionManagement>
+   <snapshotRepository>
+      <id>nexus-snapshots</id>
+      <url>http://localhost:8081/nexus/content/repositories/snapshots</url>
+   </snapshotRepository>
+</distributionManagement>
   <build>
-    <finalName>JenkinsWar</finalName>
+    <plugin>
+   <artifactId>maven-deploy-plugin</artifactId>
+   <version>2.8.1</version>
+   <executions>
+      <execution>
+         <id>default-deploy</id>
+         <phase>deploy</phase>
+         <goals>
+            <goal>deploy</goal>
+         </goals>
+      </execution>
+   </executions>
+</plugin>
+
   </build>
 </project>
