--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,20 @@
       <url>http://localhost:8081/nexus/content/repositories/snapshots</url>
    </snapshotRepository>
 </distributionManagement>
-  <build>
-    <plugin>
+<build>
+   <plugins>
+	<plugin>
+   <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-deploy-plugin</artifactId>
-   <version>2.8.1</version>
+  
+   <configuration>
+      <skip>true</skip>
+   </configuration>
+</plugin>
+<plugin>
+   <groupId>org.sonatype.plugins</groupId>
+   <artifactId>nexus-staging-maven-plugin</artifactId>
+  
    <executions>
       <execution>
          <id>default-deploy</id>
@@ -34,7 +44,12 @@
          </goals>
       </execution>
    </executions>
+   <configuration>
+      <serverId>nexus</serverId>
+      <nexusUrl>http://localhost:8081/nexus/content/repositories/repo/</nexusUrl>
+      <skipStaging>true</skipStaging>
+   </configuration>
 </plugin>
-
+		</plugins>
   </build>
 </project>
